Fix styles on Kindle HDX (super-widescreens). To-do: layout of .top-bar and .sidebar on mobiles are broken.

--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@ footer {
   background-color: #8d96b0;
   height: 100px;
   text-align: center;
-  margin: 0;
+  margin: 0 auto;
 }
 
 footer p {
@@ -143,10 +143,10 @@ BACKGROUND
   position: relative;
   height: 1px;
   width: 100%;
-  margin: 0 0 5px 0;
+  margin: 0 auto 5px auto;
   border-top: 1px solid #b69494;
   z-index: 5;
-  }
+}
 
 /**********
 DATEPICKER FIELDS
@@ -159,6 +159,7 @@ DATEPICKER FIELDS
   padding: 30px 40px 25px 125px;
   background-color: #f4f6ec;
   border-bottom: 1px solid #b69494;
+  box-sizing: border-box;
   z-index: 2;
 }
 
@@ -806,8 +807,11 @@ MEDIA QUERIES
   .bg-sheet {
     width: 1860px;
   }
+  footer, .red-divider {
+    max-width: 1900px;
+  }
   #mainline, #shadowline {
-    width: 1896px;
+    max-width: 1896px;
   }
 }
 
@@ -815,6 +819,7 @@ MEDIA QUERIES
 @media screen and (min-width: 1401px) {
   .top-bar {
     background: url("../Pics/hero-photo-vinnette(3).jpg") no-repeat top center fixed;
+    border-bottom: 1px solid white;
   }
   .date-block.fixed .datepicker-fields,
   .date-block.absolute .datepicker-fields {
@@ -826,7 +831,7 @@ MEDIA QUERIES
     color: #838692;
   }
   .hero {
-    top: 2px;
+    top: 1px;
   }
   .wrapper {
     margin: 0 10% 0 0;
